{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 580,
  "lineage": "a35affff-009c-eb6d-2c16-49262d907e8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:622459943639:instance/i-037aec1e89076535f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037aec1e89076535f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0554fc83372023132",
            "private_dns": "ip-172-31-42-126.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.126",
            "public_dns": "ec2-65-2-151-72.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.151.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07087b144c1998785",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04eba9941e300dd35",
            "tags": {
              "Name": "Terraform-assignment"
            },
            "tags_all": {
              "Name": "Terraform-assignment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069eea9c3b8711f6d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:internet-gateway/igw-0ac163e4a5fedb530",
            "id": "igw-0ac163e4a5fedb530",
            "owner_id": "622459943639",
            "tags": {
              "Name": "Terraform_IGateway"
            },
            "tags_all": {
              "Name": "Terraform_IGateway"
            },
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Load-Balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:loadbalancer/app/Load-Balancer/14ecd31965e40636",
            "arn_suffix": "app/Load-Balancer/14ecd31965e40636",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Load-Balancer-1494667568.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:loadbalancer/app/Load-Balancer/14ecd31965e40636",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Load-Balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02022a336846e1271"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c3de8cf34ef064a"
              },
              {
                "subnet_id": "subnet-087edab3db3ea04f8"
              }
            ],
            "subnets": [
              "subnet-04c3de8cf34ef064a",
              "subnet-087edab3db3ea04f8"
            ],
            "tags": {
              "Name": "Application-load-balancer"
            },
            "tags_all": {
              "Name": "Application-load-balancer"
            },
            "vpc_id": "vpc-091c85f07e3b73e0a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:listener/app/Load-Balancer/14ecd31965e40636/8d6d098917271295",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:targetgroup/Target-group/a8f54622762153d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:listener/app/Load-Balancer/14ecd31965e40636/8d6d098917271295",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:loadbalancer/app/Load-Balancer/14ecd31965e40636",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Load-Balancer",
            "aws_lb_target_group.target-group",
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:targetgroup/Target-group/a8f54622762153d0",
            "arn_suffix": "targetgroup/Target-group/a8f54622762153d0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:622459943639:targetgroup/Target-group/a8f54622762153d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Terraform_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0eb525e82626e7249",
            "network_interface_id": "eni-0fee26e1ec0f7553c",
            "private_ip": "10.0.1.95",
            "subnet_id": "subnet-04c3de8cf34ef064a",
            "tags": {
              "Name": "NAT-Gate"
            },
            "tags_all": {
              "Name": "NAT-Gate"
            }
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-private-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:route-table/rtb-06279798ee89611aa",
            "id": "rtb-06279798ee89611aa",
            "owner_id": "622459943639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb525e82626e7249",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Table-2"
            },
            "tags_all": {
              "Name": "Route_Table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.Terraform_NAT",
            "aws_subnet.subnet-1",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:route-table/rtb-06fb345f38ec225f0",
            "id": "rtb-06fb345f38ec225f0",
            "owner_id": "622459943639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac163e4a5fedb530",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Table-1"
            },
            "tags_all": {
              "Name": "Route_Table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d6f4eca5d86f165",
            "route_table_id": "rtb-06fb345f38ec225f0",
            "subnet_id": "subnet-04c3de8cf34ef064a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.subnet-1",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ddd9435b4057e2",
            "route_table_id": "rtb-06279798ee89611aa",
            "subnet_id": "subnet-087edab3db3ea04f8"
          },
          "dependencies": [
            "aws_nat_gateway.Terraform_NAT",
            "aws_route_table.prod-private-crt",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:security-group/sg-02022a336846e1271",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02022a336846e1271",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "622459943639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-transport-layer-security"
            },
            "tags_all": {
              "Name": "allow-transport-layer-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:subnet/subnet-04c3de8cf34ef064a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c3de8cf34ef064a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622459943639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Subnet-1"
            },
            "tags_all": {
              "Name": "Terraform-Subnet-1"
            },
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:subnet/subnet-087edab3db3ea04f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087edab3db3ea04f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622459943639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:subnet/subnet-0b55d9f32fe1dab02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b55d9f32fe1dab02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622459943639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Subnet-3"
            },
            "tags_all": {
              "Name": "Terraform-Subnet-3"
            },
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:subnet/subnet-0ca50d4ef634edea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca50d4ef634edea2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622459943639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-Subnet-4"
            },
            "tags_all": {
              "Name": "Terraform-Subnet-4"
            },
            "vpc_id": "vpc-091c85f07e3b73e0a"
          },
          "dependencies": [
            "aws_vpc.my_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:622459943639:vpc/vpc-091c85f07e3b73e0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087f368b917aa22b5",
            "default_route_table_id": "rtb-008ddd77be60f79d9",
            "default_security_group_id": "sg-0954cd387b6d6bee4",
            "dhcp_options_id": "dopt-0e93a3257d9cb71b5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091c85f07e3b73e0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008ddd77be60f79d9",
            "owner_id": "622459943639",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}